--- a/.cargo/config
+++ b/.cargo/config
@@ -12,3 +12,11 @@ rustflags = [
 
 [target.x86_64-pc-windows-gnu]
 linker = "x86_64-w64-mingw32-gcc"
+
+[target.i686-pc-windows-msvc]
+linker = "i686-pc-windows-msvc"
+rustflags = [
+    "-C", "panic=abort",
+    # We need the stdcall fixups to fix the name of the exported symbols.
+    "-C", "link-args=toolchain/d3d9.def -Wl,--enable-stdcall-fixup"
+]
