--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,20 +27,20 @@ jobs:
             location: .
     - name: Install Nightly Rust
       run: 
-            .\rustup-init.exe -y --default-toolchain nightly --default-host i686-pc-windows-gnu
+            .\rustup-init.exe -y --default-toolchain nightly --default-host x86_64-pc-windows-gnu
     - name: Set system path
       run: 
             set PATH=%USERPROFILE%/.cargo/bin;
     - name: Build
       run: 
-            cargo +nightly build --release --target i686-pc-windows-gnu --verbose
+            cargo +nightly build --release --target x86_64-pc-windows-gnu --verbose
     - name: Artifact Release
       uses: actions/upload-artifact@v1
       with:
         name: d3d9
-        path: target\i686-pc-windows-gnu\release\d3d9.dll
+        path: target\x86_64-pc-windows-gnu\release\d3d9.dll
     - name: Artifact Release
       uses: actions/upload-artifact@v1
       with:
         name: d3d9
-        path: target\i686-pc-windows-gnu\release\d3d9.dll
+        path: target\x86_64-pc-windows-gnu\release\d3d9.dll
